Bug fixes wof on mobile

--- a/src/assets/css/score.css
+++ b/src/assets/css/score.css
@@ -17,14 +17,14 @@
 
 .scorefix {
     position: fixed;
-    top: calc(50% - 150px);
+    top: calc(33% - 10px);
     color: #fff;
     width: calc(100% - 64px);
     max-width: 400px;
     text-align: center;
     left: 50%;
     translate: -50% -50%;
-    z-index: 2;
+    z-index: 102;
 }
 
 .scorefix-title {
